syntax = "proto3";
option java_multiple_files = true;
package com.ampnet.userservice.proto;

message GetUserRequest {
    string uuid = 1;
}

message GetUsersRequest {
    repeated string uuids = 1;
}

message UserResponse {
    string uuid = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    bool enabled = 5;
    string coop = 6;
}

message UsersResponse {
    repeated UserResponse users = 1;
}

message SetRoleRequest {
    enum Role {
        ADMIN = 0;
        TOKEN_ISSUER = 1;
        PLATFORM_MANAGER = 2;
        USER = 3;
    }
    string uuid = 1;
    Role role = 2;
    string coop = 3; // coop is just for safety
}

message UserWithInfoResponse {
    UserResponse user = 1;
    string address = 2;
    uint64 createdAt = 3;
}

message CoopRequest {
    string coop = 1;
}

service UserService {
    rpc GetUsers(GetUsersRequest) returns (UsersResponse);
    rpc SetUserRole(SetRoleRequest) returns (UserResponse);
    rpc GetPlatformManagers(CoopRequest) returns (UsersResponse);
    rpc GetTokenIssuers(CoopRequest) returns (UsersResponse);
    rpc GetUserWithInfo(GetUserRequest) returns (UserWithInfoResponse);
}
